# slackbot-juniper-mist

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
app/: app.py  mist_helper.py
app/templates/: list_of_sites.j2  marvis_issues.j2  site_alerts.j2
docker/: Dockerfile  requirements.txt
docs/mist/overview/: index.html
docs/overview/: index.html
docs/slackbot/overview/: index.html
search/: search_index.json
site/content/: index.md
site/content/docs/: overview.md
site/content/docs/mist/: overview.md
site/overrides/layouts/: home.html
site/overrides/partials/: header.html
